[package]
name = "xkcd_ascii"
version = "0.1.0"
authors = ["krzysztof"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
image = "0.23.0-preview.0"
tempfile = "3.1.0"
reqwest = "0.9.22"
scraper = "0.11.0"
term_size = "1.0.0-beta1"